--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
+			<artifactId>spring-webmvc</artifactId>
 			<version>5.3.22</version>
 		</dependency>
 		<dependency>
