--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 			<version>42.5.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>spring-web-avengers</finalName>
